fix bottom spacing

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,7 @@
 .container {
   .heroProj {
     position: relative;
-    height: auto;
+    height: 100vh;
 
     .hero {
       z-index: 1;
