--- a/styles/project/project.module.scss
+++ b/styles/project/project.module.scss
@@ -1,6 +1,6 @@
 @import "../mixins";
 .container {
-  height: 70rem;
+  // height: 70rem;
   width: 100%;
   overflow-x: auto; /* Enable horizontal scrolling */
   white-space: nowrap;
